# PyCourseWork

./: .env.example  README.md  main.py  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_coursework.py  test_reports.py  test_services.py  test_utils.py  test_views.py
