[project]
name = "pycoursework"
version = "0.1.0"
description = ""
authors = [
    {name = "AHeroWith2Arms",email = "kirillvalentinka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.build.dependencies]
setuptools = "^80.7.1"
cython = "^3.1.0"

